<resources>
    <string name="app_name">Garcon</string>
    <string name="title_activity_omeactivity">omeactivity</string>
    <string name="title_activity_homeactivity">homeactivity</string>
    <string name="title_activity_sample">sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search restaurants</string>
    <string name="text_signup">Don\'t have a account? Sign up!</string>
    <string name="button_signup">Sign up!</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password should be atleast 6 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirmpassword">The passwords do not match.</string>
    <string name="error_incorrect_phonenumber">The phone number is not valid.</string>
    <string name="error_incorrect_email">This email has not been registered with us. Please Sign Up</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="toast_forgot_password_email">An email has been sent with a link to reset your password.</string>

    <!-- Strings related to sign up -->
    <string name="error_email_exists">This email is already registered with Garcon</string>
    <string name="success_account_created">You account has been successfully created.</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="prompt_phonenumber">Phone Number</string>


    <!-- Generic Strings -->
    <string name="error_oops">Oops! Something went wrong.</string>
    <string name="title_activity_beacon">Nearby Restaurants</string>

    <!-- Facebook API-->
    <string name="facebook_app_id">1195655813788685</string>
    <string name="title_activity_checkout">CheckoutActivity</string>

    <!--ViewCart-->
    <string name="your_order">YOUR ORDER</string>
    <string name="place_order">Place Order</string>
    <string name="buttonTableSize">Table for 2</string>
    <string name="buttonOrderDate">Today</string>
    <string name="buttonOrderTime">00:00 AM</string>
    <string name="editTextTableNumberHint">Table Number</string>
    <string name="editTextSpecialInstructionsHint">Add special instructions or comment</string>
    <string name="spinnerRestaurantAreaHint">Restaurant Area</string>
    <string name="buttonItemDetails">Edit</string>
    <string-array name="optionsOrderTime">
        <item>00:00 AM</item>
        <item>00:15 AM</item>
        <item>00:30 AM</item>
        <item>00:45 AM</item>
        <item>01:00 AM</item>
        <item>01:15 AM</item>
        <item>01:30 AM</item>
        <item>01:45 AM</item>
        <item>02:00 AM</item>
    </string-array>
    <string-array name="optionsOrderDate">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
    <string-array name="optionsTableSize">
        <item>Table for 1</item>
        <item>Table for 2</item>
        <item>Table for 3</item>
        <item>Table for 4</item>
        <item>Table for 5</item>
        <item>Table for 6</item>
        <item>Table for 7</item>
        <item>Table for 8</item>
    </string-array>
    <string-array name="optionsRestaurantArea">
        <item>Dining Area</item>
        <item>Outside</item>
        <item>Bar</item>
    </string-array>

    <!-- Strings related to shared preferences -->
    <string name="shared_pref_file_name">GarconPref</string>
    <string name="User_UUID_Key">UserUUID</string>

    <!-- Strings related to checkout -->
    <string name="subtotal">Subtotal</string>
    <string name="buffer_amount">Buffer Amount</string>
    <string name="tax">Tax</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="Add">Add</string>
    <string name="Add_Tip">Add Tip</string>
    <string name="Enter_Tip">Enter Tip</string>

    <string-array name="cardtype">
        <item>American Express</item>
        <item>Discover</item>
        <item>MasterCard</item>
        <item>Visa</item>
    </string-array>


    <string name="title_activity_favorite_activity">Favorites</string>
    <string name="menu_map">MAP</string>
    <string name="menu_list">LIST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due">Due</string>
    <string name="str_quantity">Quantity</string>
    <string name="str_price">Price</string>
    <string name="title_activity__manage_profile">activity_ManageProfile</string>
    <string name="title_activity__profile_tab">activity_Profile_tab</string>
    <string name="Input_Tip">Input Tip</string>
    <string name="Service_Charge">Charge</string>
    <string name="Gratuity">Gratuity</string>
</resources>
