<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools">



    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/process"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin">
            <TextView
                android:layout_width="match_parent"
                android:text="Check"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_height="match_parent" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/orderlist"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>
            <RadioGroup android:id="@+id/paymentOption"
                android:layout_below="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/payApp"
                android:orientation="vertical"
                android:visibility="gone">
                <RadioButton android:id="@+id/payApp"
                    android:text="Pay Via App"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
                <RadioButton android:id="@+id/payStore"
                    android:text="Pay At Counter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />


            </RadioGroup>
            <RelativeLayout android:id="@+id/payment_information"
                android:layout_below="@+id/paymentOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.garcon.garcon.NonScrollableListView android:id="@+id/credit_cards"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:divider="@color/lime"
                    android:dividerHeight="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:clickable="true" />
                <TextView android:id="@+id/addCard"
                    android:background="@color/lime"
                    android:text="add card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/credit_cards"
                    android:layout_alignRight="@+id/credit_cards"
                    android:clickable="true"
                    android:onClick="addCard"
                    android:textSize="15dp"
                    android:visibility="gone"/>

            </RelativeLayout>
            <RelativeLayout android:id="@+id/subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"/>
                <TextView android:id="@+id/subtotal_final"
                    android:text="@string/buffer_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout android:id="@+id/tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"/>
                <TextView android:id="@+id/tax_final"
                    android:text="@string/buffer_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:text="@string/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"/>
                <TextView android:id="@+id/total_final"
                    android:text="@string/buffer_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>
            <RelativeLayout android:id="@+id/due"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                <TextView android:text="Due"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentLeft="true"/>
                <TextView android:id="@+id/due_final"
                          android:text="@string/buffer_amount"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentRight="true"/>


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Process pAyment"
        android:id="@+id/process"
        android:layout_gravity="bottom"
        android:onClick="processPayment"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>